Fixed tutorial list alignment

--- a/farm-forward/src/tutorialScreen.css
+++ b/farm-forward/src/tutorialScreen.css
@@ -9,7 +9,10 @@ p {
     font-family: 'Montserrat', sans-serif;
 }
 
-
+.lessons-list {
+  margin-right: 2rem;
+  padding: none;
+}
 .tutorial-screen {
   display: flex;
   justify-content: flex-start;
@@ -17,7 +20,7 @@ p {
   height: 100vh;
   width: 100%;
   overflow: hidden;
-  background-color: #e8f5e9; /* Light green */
+  background-color: #fffdd2; 
   padding-bottom: 20px; 
 }
   
@@ -28,14 +31,15 @@ p {
     justify-content: top;
     width: 200px;
     background-color: #40b93c;
-    padding: 20px;
+    padding-top: 20px;
     overflow-y: visible;
   }
 
   .sidebar-button {
+    text-align: center;
     display: block;
     width: 100%;
-    padding: 10px;
+    padding: 5px;
     margin-bottom: 10px;
     background-color: #ffffff; 
     color: #40b93c;
@@ -43,10 +47,11 @@ p {
     border-radius: 4px;
     cursor: pointer;
     font-family: 'Montserrat', sans-serif;
+    box-shadow: 0 0 0.2rem gray inset;
   }
   
   .sidebar-button:hover {
-    background-color: #fffdd2; /* Darker green */
+    background-color: #fffdd2;
   }
   
   .video-container {
